compiler-core/src/snapshots/gleam_core__config__deny_extra_deps_properties.snap
---
source: compiler-core/src/config.rs
expression: error.pretty_string()
---
error: File IO failure

An error occurred while trying to parse this file:

    gleam.toml

The error message from the file IO library was:

    TOML parse error at line 6, column 83
  |
6 | aide_generator = { git = "git@github.com:crowdhailer/aide.git", ref = "f559c5bc", extra = "idk what this is" }
  |                                                                                   ^^^^^
unknown field `extra`, expected one of `version`, `path`, `git`, `ref`
