compiler-core/src/snapshots/gleam_core__config__docs_prefix_dot_dot_string_path.snap
---
source: compiler-core/src/config.rs
expression: "toml::from_str::<PackageConfig>(input).unwrap_err().to_string()"
---
TOML parse error at line 5, column 38
  |
5 | pages = [{ title = "My Page", path = "something/../../secrets.txt", source = "./path/to/my-page.md" }]
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
paths must not contain .. segments
