compiler-core/src/snapshots/gleam_core__config__invalid_dependency_name.snap
---
source: compiler-core/src/config.rs
assertion_line: 385
expression: error.pretty_string()
---
error: File IO failure

An error occurred while trying to parse this file:

    gleam.toml

The error message from the file IO library was:

    TOML parse error at line 5, column 1
  |
5 | [dependencies]
  | ^^^^^^^^^^^^^^
invalid value: string "Hello", expected a package name containing only lowercase letter, numbers, and underscores
